<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

    <Button
            android:id="@+id/anko_commons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anko_commons" />

    <Button
            android:id="@+id/btn_lazy_lateinit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lazy" />


    <Button
            android:id="@+id/btn_serialization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serialization" />


    <Button
            android:id="@+id/btn_destructing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destructing_declaratives" />

    <Button
            android:id="@+id/btn_operators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operators" />

    <Button
            android:id="@+id/btn_infix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infix" />

    <Button
            android:id="@+id/btn_sealed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sealed" />

    <Button
            android:id="@+id/btn_local_functions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_functions" />

    <Button
            android:id="@+id/btn_coroutines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coroutines" />
</LinearLayout>